# terminal-log-symbols-rs

./: Cargo.toml  README.md
examples/: thumbnail.rs
src/: lib.rs
