[package]
name = "terminal-log-symbols"
description = "Provides log symbols for the terminal with fallbacks"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/SirWindfield/terminal-log-symbols-rs"
version = "0.1.5"
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["colors"]
colors = ["ansi-colors-macro"]

[dependencies]
ansi-colors-macro = { version = "0.1.1", optional = true }
terminal-emoji = "0.4.0"
